--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -4,14 +4,13 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-
   font-weight: normal;
 }
 
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: rgb(0, 189, 66);
   transition: 0.4s;
 }
 
